[gd_scene load_steps=6 format=2]

[ext_resource path="res://SD.py" type="Script" id=1]
[ext_resource path="res://Button.gd" type="Script" id=3]
[ext_resource path="res://bnSave.gd" type="Script" id=4]
[ext_resource path="res://FileDialog.gd" type="Script" id=5]
[ext_resource path="res://bnExit.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]

[node name="SD" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 37.0
margin_top = 25.0
margin_right = 167.0
margin_bottom = 39.0
text = "Text2Image Prompt:"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 41.0
margin_top = 46.0
margin_right = 1885.0
margin_bottom = 65.0

[node name="Button" type="Button" parent="."]
margin_left = 41.0
margin_top = 74.0
margin_right = 125.0
margin_bottom = 94.0
text = "Generate"
script = ExtResource( 3 )

[node name="lblOutput" type="Label" parent="."]
margin_left = 6.0
margin_top = 138.0
margin_right = 1910.0
margin_bottom = 173.0
align = 1

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 588.0
margin_top = 231.0
margin_right = 1356.0
margin_bottom = 999.0

[node name="bnSave" type="Button" parent="."]
margin_left = 41.0
margin_top = 101.0
margin_right = 126.0
margin_bottom = 121.0
disabled = true
text = "Save..."
script = ExtResource( 4 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 900.0
margin_bottom = 400.0
rect_min_size = Vector2( 900, 400 )
popup_exclusive = true
window_title = "Save file"
resizable = true
access = 2
script = ExtResource( 5 )

[node name="bnExit" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1893.0
margin_top = 6.0
margin_right = 1913.0
margin_bottom = 26.0
text = "X"
script = ExtResource( 6 )

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="pressed" from="bnSave" to="bnSave" method="_on_bnSave_pressed"]
[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="bnExit" to="bnExit" method="_on_bnExit_pressed"]
